<resources>
    <string name="app_name">PuntodeVenta_1.1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mi Punto de Venta</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="vender">Vender</string>
    <string name="ventas">Ventas</string>
    <string name="productosFragment">Productos</string>
    <string name="catalogo_Online">Catalogo Online</string>
    <string name="configuracion">Configuración</string>
    <string name="ayuda">Ayuda</string>
    <string name="txtFiltrat">Filtrar</string>
    <string name="spinnerVentas">Spinner donde se muestra el historial de ventas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modoObscuro">Modo Obscuro</string>
    <string name="lightDark_switch">Light Mode</string>
    <string name="personalizar">Personalizar</string>
    <string name="fuente">Fuente</string>
    <string name="tamañoFuente">Tamaño de Fuente</string>
    <string name="colores">Colores</string>

    <string name="tvBuscarProd">Buscar producto</string>
    <string name="ptBarraBusq">Buscar</string>
    <string name="tvVenta">Venta de CAJA</string>
    <string name="ibImage1">Imagen1</string>
    <string name="ibImage2">Imagen2</string>
    <string name="ibImage3">Imagen3</string>
    <string name="ibImage4">Imagen4</string>
    <string name="btnEscanear">Escanear producto</string>
    <string name="btnHacerCobro">Hacer cobro</string>
    <string name="ptEfectivo">Efectivo</string>
    <string name="ptDolar">Dolar</string>
    <string name="ptTarjeta">Tarjeta</string>
    <string name="ptTotal">Total</string>
    <string name="tvCambio">Cambio</string>
    <string name="btnCobrar">Cobrar</string>
</resources>